connecting copy doc and setting up venue size

--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
   "google": {
     "doc": [
       {
-        "id": "",
-        "filepath": ""
+        "id": "1e_sRpCSsoE-I0XDXT6uVm64xLulxHCJIopQnWBlzOF0",
+        "filepath": "template-data/doc.json"
       }
     ],
     "sheet": [
