--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
+    "d3": "^5.8.2",
     "fontfaceobserver": "^2.1.0",
     "lodash.debounce": "^4.0.8",
     "nouislider": "^12.1.0",
@@ -58,7 +60,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "getBillboardHTML": "node src/js/gifs.js"
   },
   "repository": {
     "type": "git",
