--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cheerio": "^1.0.0-rc.2",
     "d3": "^5.8.2",
     "fontfaceobserver": "^2.1.0",
+    "lodash": "^4.17.11",
     "lodash.debounce": "^4.0.8",
     "nouislider": "^12.1.0",
     "promise-polyfill": "^8.1.0",
